# code-reviewer

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  TEST_COVERAGE_ANALYSIS.md  config.example.toml  pyproject.toml
.agents/skills/code-review/: SKILL.md
.claude/skills/code-review/: SKILL.md
.github/workflows/: ci.yml  docker.yml
docs/plans/: 2026-03-05-observability-design.md  2026-03-05-observability-implementation.md  2026-03-05-slash-command-trigger-design.md  2026-03-05-slash-command-trigger-plan.md  2026-03-05-triage-lightweight-review-design.md  2026-03-05-triage-lightweight-review-plan.md
docs/superpowers/plans/: 2026-03-17-embed-history-server-in-daemon.md  2026-03-20-circuit-breaker.md  2026-03-20-decouple-discovery-from-processing.md
docs/superpowers/specs/: 2026-03-17-embed-history-server-in-daemon-design.md  2026-03-20-circuit-breaker-design.md  2026-03-20-decouple-discovery-from-processing-design.md
src/code_reviewer/: __init__.py  __main__.py  backend_usage.py  claude_usage.py  cli.py  config.py  daemon.py  github.py  github_app_auth.py  history_server.py  local_review.py  logger.py  models.py  output.py  preflight.py  processor.py  progress.py  prompts.py  repos.py  shell.py  skills.py  state.py  webhook.py  workspace.py
src/code_reviewer/prompt_specs/: full_review.toml  lightweight_review.toml  reconcile.toml  triage.toml
src/code_reviewer/reviewers/: __init__.py  _circuit_breaker.py  _fallback.py  _sanitize.py  claude_cli.py  claude_sdk.py  codex_agents_sdk.py  codex_cli.py  gemini_cli.py  lightweight.py  opencode_cli.py  reconcile.py  triage.py
src/pr_reviewer/: __init__.py  __main__.py  cli.py  config.py  daemon.py  github.py  local_review.py  logger.py  models.py  output.py  preflight.py  processor.py  review_decision.py  shell.py  state.py  workspace.py
src/pr_reviewer/reviewers/: __init__.py  claude_sdk.py  (+6 more)
tests/: conftest.py  test_backend_usage.py  test_circuit_breaker.py  test_claude_cli.py  test_claude_sdk.py  test_cli.py  test_codex_agents_sdk.py  test_codex_cli.py  test_config.py  test_daemon.py  test_daemon_app.py  test_fallback.py  test_gemini_cli.py  test_github.py  test_github_app_auth.py  test_github_extra.py  test_history_server.py  test_lightweight.py  test_local_review.py  test_models.py  test_opencode_cli.py  test_output.py  test_preflight.py  test_processor.py  test_processor_extra.py  test_progress.py  test_prompts.py  test_reconcile.py  test_repos.py  test_review_decision.py  test_shell.py  test_skills.py  test_slash_command.py  test_state.py  test_triage.py  test_webhook.py  test_workspace.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  api.ts  index.css
(+7 files in other folders)
