[project]
name = "pr-reviewer"
version = "0.1.0"
description = "Daemon that reviews GitHub PRs with Claude Agent SDK and Codex"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.0.0",
  "claude-agent-sdk>=0.1.44",
  "pydantic>=2.8.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.12.7",
]

[project.scripts]
pr-reviewer = "pr_reviewer.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Prompt template strings contain long lines by design.
"src/pr_reviewer/reviewers/reconcile.py" = ["E501"]
"src/pr_reviewer/reviewers/triage.py" = ["E501"]
"src/pr_reviewer/reviewers/lightweight.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/pr_reviewer"]
