[project]
name = "code-reviewer"
version = "0.1.0"
description = "AI code review daemon powered by Claude, Codex, and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.0.0",
  "claude-agent-sdk>=0.1.44",
  "pydantic>=2.8.0",
  "PyJWT[crypto]>=2.8.0",
  "rich>=13.7.0",
  "starlette>=0.44.0",
  "typer>=0.12.3",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.12.7",
]

[project.scripts]
code-reviewer = "code_reviewer.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv]
required-environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.per-file-ignores]
# Prompt template strings contain long lines by design.
"src/code_reviewer/reviewers/reconcile.py" = ["E501"]
"src/code_reviewer/reviewers/triage.py" = ["E501"]
"src/code_reviewer/reviewers/lightweight.py" = ["E501"]
"src/code_reviewer/prompts.py" = ["E501"]
"src/code_reviewer/processor.py" = ["E501"]
"tests/test_opencode_cli.py" = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/code_reviewer"]
include = ["src/code_reviewer/prompt_specs/*.toml"]

[tool.hatch.build.targets.sdist]
include = ["src/code_reviewer/prompt_specs/*.toml"]
